--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.6",
     "loaders.css": "^0.1.2",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-icon": "^1.0.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
